Add admin config file detail and update APIs
